PR ld/2659 * cofflink.c (_bfd_coff_link_input_bfd): Fix selection of aux entry when   multiple definitions of a symbol are encountered.